removed some divs and fixed bottom alignment

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,52 @@
+/* .container {
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr; 
+}
+*/
+/* .top-nav-bar ul {
+    padding: 0;
+    margin: 16px;
+
+    display: flex;
+    list-style-type: none;
+    justify-content: flex-end;
+}
+
+.top-nav-bar ul > li {
+    /* border: 1px solid white; */
+    /* margin: 4px; */
+    /* padding: 4px; */
+    /* background-color: purple; */
+    /* align-self: center; */
+
+}
+
+/* Starterly logo */
+/* .top-nav-bar ul > li:first-child { */
+    /* background-color: tomato; */
+    /* flex-grow: 1; */
+
+    /* font-style: italic; */
+    /* font-size: 28pt; */
+    /* font-weight: bolder; */
+}
+/*  
+.title-section {
+    border: 5px solid silver;
+    background-color: orange;
+}
+
+.title-section h1 {
+    display: flex;
+    align-items: center;
+} */
+
 .container {
     display: grid;
-  /*   grid-template-rows: repeat(8, 12.5%); */
-    grid-template-columns: repeat(4, 25%);
-  /*   grid-column-gap: 10px; */
-  /*   grid-row-gap: 15px; */
-  }
+    /* grid-template-rows: repeat(8, 12.5%); */
+    grid-template-columns: repeat(4, 1fr);
+    padding: 1em;
+  } 
 
 .top-nav-bar {
     grid-column: 1 / span 4;
@@ -18,6 +60,10 @@
 .navigation ul {
     list-style-type: none;
     display: flex;
+}
+
+.navigation ul li:nth-child(2), .navigation ul li:nth-child(3) {
+    display: flex
 }
 
 .title-section {
@@ -124,22 +170,35 @@
     display: flex;
     justify-content: space-evenly;
     padding: 3%;
+} 
+
+li {
+    list-style-type: none;
 }
+
+.support-and-about {
+    display: flex;
+    flex-direction: row;
+}
+
+.support-and-about ul {
+    padding: 0px;
+}
+
   /* .support-and-about {
     display: flex;
   } */
-  /* .support-and-about .support { */
-  /*   background-color: tomato; */
-  /*   grid-row: 8 / 9; */
-  /*   grid-column: 1 / 2; */
-  /*   display: flex */
-  /*    padding: 5% */
-  /* } */
+  .support-and-about {
+    background-color: tomato;
+    grid-row: 8 / 9;
+    grid-column: 1 / 2;
+    display: flex;
+    padding: 5% 
+  }
   
   /* .about { */
   /*   background-color: purple; */
   /*   grid-row: 8; */
   /*   grid-column: 2 / 3 */
   /*   padding: 5% */
-  /* } */
-  
+  /* } 
